feat: logs added